# cookiecutter-python-pyo3

./: .pre-commit-config.yaml  README.md  cookiecutter.json  pyproject.toml
hooks/: post_gen_project.py
tests/: test_cookiecutter.py
{{cookiecutter.project_slug}}/: .gitignore  .pre-commit-config.yaml  Cargo.toml  justfile  pyproject.toml  requirements-dev.txt
{{cookiecutter.project_slug}}/actions/: dependabot.yml  pypi_publish.yaml  testing_all_os.yaml  testing_all_os.yml  testing_linux_only.yaml  testing_linux_only.yml
{{cookiecutter.project_slug}}/src/: lib.rs
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.source_dir}}.py
{{cookiecutter.project_slug}}/{{cookiecutter.source_dir}}/: __init__.py  _{{cookiecutter.source_dir}}.pyi
