[tool.poetry]
name = "cookiecutter-python-pyo3"
version = "0.1.0"
description = "A cookiecutter template to setup a generic Python project with pyo3"
authors = ["Paul Sanders <psanders1@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
cookiecutter = "2.3.0"

[tool.poetry.group.dev.dependencies]
black = "23.7.0"
pytest = "7.4.2"
pre-commit = "3.4.0"
ruff = "0.0.289"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.egg
  | \.git
  | \.hg
  | \.mypy_cache
  | \.nox
  | \.tox
  | \.venv
  | \venv
  | _build
  | buck-out
  | build
  | dist
  | setup.py
)/
'''

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--ignore={{cookiecutter.project_slug}}/tests"

[tool.ruff]
select = ["E", "F", "T201", "T203", "I001"]
ignore = ["E501"]
exclude = ["{{{{cookiecutter.project_slug}}}}"]
line-length = 100
fix = true
