[package]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.project_description }}"
edition = "2021"
license = "{{ cookiecutter.license }}"
readme = "README.md"

[lib]
name = "_{{ cookiecutter.source_dir }}"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.19.0", features = ["extension-module", "abi3-py{{ cookiecutter.min_python_version.replace('.', '').replace('^', '') }}"] }
