[build-system]
requires = ["maturin>=1.0.0"]
build-backend = "maturin"

[project]
name = "{{ cookiecutter.project_slug }}"
description = "{{ cookiecutter.project_description }}"
authors = [{name = "{{ cookiecutter.creator }}", email =  "{{ cookiecutter.creator_email }}"}]
{% if cookiecutter.license != "No License" -%}
license = {file = "LICENSE"}
{% endif -%}
readme = "README.md"

[tool.maturin]
module-name = "{{ cookiecutter.source_dir }}._{{ cookiecutter.source_dir }}"
binding = "pyo3"
features = ["pyo3/extension-module"]

[tool.black]
line-length = {{ cookiecutter.max_line_length }}
include = '\.pyi?$'
exclude = '''
/(
    \.egg
  | \.git
  | \.hg
  | \.mypy_cache
  | \.nox
  | \.tox
  | \.venv
  | \venv
  | _build
  | buck-out
  | build
  | dist
  | setup.py
)/
'''

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov={{ cookiecutter.source_dir }} --cov-report term-missing"

[tool.ruff]
select = ["E", "F", "UP", "I001", "T201", "T203"]
ignore = ["E501"]
line-length = {{ cookiecutter.max_line_length }}
target-version = "py{{ cookiecutter.min_python_version.replace('.', '').replace('^', '') }}"
fix = true
